--- a/k8s_manifests/k8smanifest.yaml
+++ b/k8s_manifests/k8smanifest.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: jenkins-argocd-k8-app
-  namespace: jenkins
+  
   labels: argocd-k8-app
 spec:
   replicas: 2
@@ -18,7 +18,7 @@ spec:
   spec:
     containers:
     - name: argocd-k8-app-container
-      image: venu1322/cicd-jenkins-argocd-k8:replaceImageTag
+      image: venu1322/ultimate-cicd:replaceImageTag
       ports:
       - containerPort: 8080
 ---
@@ -26,7 +26,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-argo-k8-app
-  namespace: jenkins
+  
 spec:
   type: NodePort
   selector::
