--- a/k8s_manifests/k8smanifest.yaml
+++ b/k8s_manifests/k8smanifest.yaml
@@ -1,10 +1,9 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: jenkins-argocd-k8-app
-  
-  labels: argocd-k8-app
+  labels: 
+    app: argocd-k8-app
 spec:
   replicas: 2
   selector:
@@ -12,29 +11,28 @@ spec:
       app: argocd-k8-app
   template:
     metadata:
-    name: argocd-k8-app-pod
-    labels:
-      app: argocd-k8-app
-  spec:
-    containers:
-    - name: argocd-k8-app-container
-      image: venu1322/ultimate-cicd:replaceImageTag
-      ports:
-      - containerPort: 8080
+      name: argocd-k8-app-pod
+      labels:
+        app: argocd-k8-app
+    spec:
+      containers:
+      - name: argocd-k8-app-container
+        image: venu1322/ultimate-cicd:replaceImageTag
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-argo-k8-app
-  
 spec:
   type: NodePort
   selector:
     app: argocd-k8-app
   ports:
-    - port: 8080
+    - name: http
+      port: 8080
       targetPort: 8080
-      nodePort: 30006 
       protocol: TCP
   
 
